[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "tests",
    "entity",
]

[workspace.package]
authors = ["timzaak <zsy.evan@gmail.com>"]
edition = "2024"
version = "3.0.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4" }
clap = { version = "4.5" }
console = "0.16"
dashmap = "6.1"
delay_timer = "0.11.6"
duration-str = "0.17"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
md-5 = "0.10"
percent-encoding = "2.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0" }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.0" }
toml = { version = "0.9.8" }
toml_edit = "0.23.7"
tracing = "0.1.21"
tracing-subscriber = { version = "0.3" }
walkdir = "2.5"
salvo = "0.85.0"