[package]
name = "spa-client"
version = "0.1.1"
edition = "2021"
authors = ["timzaak"]
license = "MIT"
repository = "https://github.com/timzaak/spa-server"
readme = "README.md"
keywords = ["spa-server-cli", "release-web-tool"]
categories = ["command-line-utilities", "accessibility", "web-programming::http-client"]

include = ["src/**/*", "Cargo.toml"]

#rust-version = "1.59"

[[bin]]
name = "spa-client"
path = "src/bin/main.rs"


[dependencies]
spa-server = { path = "../server" }

# web request
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros"] }
futures = "0.3"



# command arg parse
clap = { version = "3.1", features = ["env", "derive"] }

# tokio trace and log
tracing = "0.1"
tracing-subscriber = "0.2"

#config
hocon = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#console output
console = "0.15"
indicatif = "0.16"

md-5 = "0.10"
# util
anyhow = "1.0"
walkdir = "2.3"
if_chain = "1.0"


