[package]
name = "spa-client"
version = "2.2.4"
edition = "2021"
authors = ["timzaak"]
license = "MIT"
repository = "https://github.com/fornetcode/spa-server"
readme = "../README.md"
keywords = ["spa-server-cli", "release-web-tool"]
categories = ["command-line-utilities", "accessibility", "web-programming::http-client"]

include = ["src/**/*", "Cargo.toml"]


[[bin]]
name = "spa-client"
path = "src/bin/main.rs"


[dependencies]
spa-server = { path = "../server" }

# web request
reqwest = { version = "0.12.4", features = ["json", "blocking", "multipart", "stream"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros", "test-util"] }
futures = "0.3"



# command arg parse
clap = { version = "3.1", features = ["env", "derive"] }

# tokio trace and log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#config
hocon = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#console output
console = "0.15"
indicatif = "0.17.8"

md-5 = "0.10"
# util
anyhow = { version = "1.0", features = ["backtrace"] }
walkdir = "2.3"
if_chain = "1.0"


