[package]
name = "spa-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository = "https://github.com/fornetcode/spa-server"
readme = "../README.md"
keywords = ["spa-server-cli", "release-web-tool"]
categories = ["command-line-utilities", "accessibility", "web-programming::http-client"]

include = ["src/**/*", "Cargo.toml"]


[[bin]]
name = "spa-client"
path = "src/bin/main.rs"


[dependencies]
entity = { path = "../entity" }

# web request
reqwest = { workspace = true, features = ["json", "blocking", "multipart", "stream", "rustls-tls"], default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros", "test-util"] }
futures = { workspace = true }



# command arg parse
clap = { workspace = true, features = ["env", "derive"] }

# tokio trace and log
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

#config
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

#console output
console = { workspace = true }
indicatif = { workspace = true }

md-5 = { workspace = true }
# util
anyhow = { workspace = true, features = ["backtrace"] }
walkdir = { workspace = true }
if_chain = { workspace = true }