[package]
name = "entity"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
salvo = { workspace = true, features = ["oapi"] }