[package]
name = "spa-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository = "https://github.com/fornetcode/spa-server"
readme = "../README.md"
keywords = ["static-web-server", "spa-server"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "spa-server"
path = "src/main.rs"

[dependencies]
entity = { path = "../entity" }
# web
#hyper = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros"] }

# warp inner
percent-encoding = { workspace = true }
#headers = { workspace = true }

futures-util = { workspace = true }


# tokio trace and log
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

#tracing-opentelemetry = { workspace = true }
#opentelemetry = { workspace = true, features = ["trace"] }
#opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
#opentelemetry-otlp = { workspace = true, features = ["default"] }
#opentelemetry-semantic-conventions = { workspace = true }

# tokio cron
delay_timer = { workspace = true } # dashmap is same

#config
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

#cache
dashmap = { workspace = true }

# util
md-5 = { workspace = true }
regex = { workspace = true }
# solve return  result
anyhow = { workspace = true, features = ["backtrace"] }
# solve dir walk without recursion
walkdir = { workspace = true }
# time
chrono = { workspace = true, features = ["serde"] }

salvo = { workspace = true, features = ["serve-static", "size-limiter", "trailing-slash", "affix-state", "basic-auth"] }