[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "http_test"
[[test]]
name = "acme_test"


[dependencies]
spa-client = { path = "../client" }
spa-server = { path = "../server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros", "test-util"] } # sync with spa-server
reqwest = { version = "0.11.27", features = ["json", "multipart", "stream", "rustls-tls"] } # from spa-client
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.56"
console-subscriber = "0.3"
#rustls = "0.21.12" # from reqwest
#rustls-pemfile = "2.1.2"
