[package]
name = "tests"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true

[[test]]
name = "http_test"


[dependencies]
spa-client = { path = "../client" }
spa-server = { path = "../server" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "tokio-macros", "test-util"] }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
#opentelemetry-stdout = { workspace = true, features = ["trace"] }
#tracing-opentelemetry = { workspace = true }
#opentelemetry = { workspace = true, features = ["trace", "metrics"] }
#opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "metrics"] }